<resources>
    <string name="app_name">FakeVibrato</string>
    <string name="title_home">首页</string>
    <string name="title_attention">关注</string>
    <string name="title_release">发布</string>
    <string name="title_notifications">消息</string>
    <string name="title_user">我的</string>

    //home
    <string name="tabSegment_item_1_title">首页</string>
    <string name="tabSegment_item_2_title">关注</string>
    <string name="tabSegment_item_4_title">消息</string>
    <string name="tabSegment_item_5_title">我的</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>



    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

</resources>
