<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_attention"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_attention" />

    <item
        android:id="@+id/navigation_release"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_release" />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_user" />
</menu>
